# the-pass

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agents/: coordinator.md  implementer.md  researcher.md  reviewer.md
automations/: corpus-refresh.yaml  data-health.yaml  drift-report.yaml  gate-checker.yaml  nightly-baselines.yaml  paper-observer.yaml  risk-monitor.yaml  tca-report.yaml  weekly-research-summary.yaml
config/: agent-orchestration.v1.yaml  gate-policies.v1.yaml  skill-pipeline.v1.yaml
docs/: adapter-contract.md
reports/: CROSS_AGENT_ORCHESTRATION_AUDIT_0.9.0.md  FINAL_IMPLEMENTATION_AUDIT_2026-07-10.md  FULL_REPOSITORY_STABILITY_AUDIT_2026-07-10.md  POST_RELEASE_AUDIT_0.10.0.md  POST_RELEASE_AUDIT_0.12.0.md  POST_RELEASE_AUDIT_0.13.0.md  POST_RELEASE_AUDIT_0.8.0.md  POST_RELEASE_AUDIT_0.9.0.md  POST_RELEASE_AUDIT_0.9.1.md  README.md  RELEASE_AUDIT_0.10.0.md  RELEASE_AUDIT_0.11.0.md  RELEASE_AUDIT_0.12.0.md  RELEASE_AUDIT_0.13.0.md  RELEASE_AUDIT_0.14.0.md  RELEASE_AUDIT_0.15.0.md  RELEASE_AUDIT_0.7.0.md  RELEASE_AUDIT_0.7.1.md  RELEASE_AUDIT_0.8.0.md  RELEASE_AUDIT_0.9.0.md  RELEASE_AUDIT_0.9.1.md  REPOSITORY_HARDENING_AUDIT_2026-07-10.md  SLASH_SKILL_AUDIT_2026-07-09.md  SLASH_SKILL_CONSOLIDATION_AUDIT_2026-07-10.md  SUPERVISED_WORKFLOW_AUDIT_2026-07-11.md  SYSTEM_HARDENING_AUDIT_2026-07-09.md
research/: research_brief.yaml  sources.yaml
schemas/: README.md  adapter.schema.json  agent_result.schema.json  agent_task.schema.json  approval_pack.schema.json  (+38 more)
(+487 files in other folders)
